--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
-<p>Hello there.</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Fencing Points Tracker</title>
+    <link href="src/styles/style.css" rel="stylesheet">
+  </head>
+  <body>
+    <h1>Fencing Points Tracker</h1>
+    <div id="selectors" style="display:flex-horizontal;">
+      <select id="weapon-select" onchange="load()">
+        <option value="S">Sabre</option>
+        <option value="F">Foil</option>
+        <option value="E">Epee</option>
+      </select>
+      <select id="gender-select">
+        <option value="M">Men</option>
+        <option value="W">Women</option>
+      </select>
+      <select id="event-select">
+        <option value="I">Individual</option>
+        <option value="E">Team</option>
+      </select>
+      <select id="category-select">
+        <option value="S">Senior</option>
+        <option value="J">Junior</option>
+      </select>
+      <select id="zone-select">
+        <option value="world">Worldwide</option>
+        <option value="Africa">Africa</option>
+        <option value="America">America</option>
+        <option value="Asia And Oceania">Asia And Oceania</option>
+        <option value="Europe">Europe</option>
+      </select>
+    </div><br>
+    <table border="1" id="points-table">
+      <thead>
+        <tr>
+          <th>Rank</th>
+          <th>Name</th>
+          <th>Country</th>
+          <th>Points</th>
+        </tr>
+      </thead>
+      <tbody id="points-table-body"></tbody>
+    </table>
+    <script src="src/scripts/index.js" type="text/javascript"></script>
+    <script src="dist/bundle.js" type="text/javascript"></script>
+  </body>
+</html>
