add team olympic highlighting

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         <option value="Asia And Oceania">Asia And Oceania</option>
         <option value="Europe">Europe</option>
       </select>
+      <select id="points-type-select">
+        <option value="olympic">Olympic</option>
+        <option value="overall">Overall</option>
+      </select>
     </div><br>
     <table border="1" id="points-table">
       <thead>
