--- a/index.html
+++ b/index.html
@@ -6,8 +6,22 @@
   </head>
   <body>
     <h1>Fencing Points Tracker</h1>
+    <p>This page is meant to simplify looking up Olympic qualification standings for the 2024 Paris Olympics. You can select different options in the dropdowns below to get the table for a specific event.</p>
+    <p>The data is scraped from the
+      <a href="https://fie.org/athletes">FIE website</a>, and is updated whenever I make a change to the code or likely after a major event. If you want to see the code, or contribute, check out the Github repo: 
+      <a href="https://github.com/kilacoda/fencing_points_tracker">Source (GitHub)</a>
+    </p>
+    <p>Qualification legend:</p>
+    <div id="qualification-info">
+      <div style="width: 13pt; height: 13pt; background-color: green;border: 1px solid black;"></div>
+      <p>Qualified (team/zone qualified individual)    </p>
+      <div style="width: 13pt; height: 13pt; background-color: gray;border: 1px solid black;"></div>
+      <p>Qualified (individual qualified due to team)	</p>
+      <div style="width: 13pt; height: 13pt;border: 1px solid black;"></div>
+      <p>Did not qualify</p>
+    </div><br><br>
     <div id="selectors" style="display:flex-horizontal;">
-      <select id="weapon-select" onchange="load()">
+      <select id="weapon-select">
         <option value="S">Sabre</option>
         <option value="F">Foil</option>
         <option value="E">Epee</option>
