note on quali period

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       <a href="https://fie.org/athletes">FIE website</a>, and is updated whenever I make a change to the code or likely after a major event. If you want to see the code, or contribute, check out the Github repo: 
       <a href="https://github.com/kilacoda/fencing_points_tracker">Source (GitHub)</a>
     </p>
+    <p>
+      <b>NOTE:</b> Olympic qualification only counts events from April 3rd, 2023 - April 1st, 2024, hence the difference between the overall and Olympic standings.
+    </p>
     <p>Qualification legend:</p>
     <div id="qualification-info">
       <div style="width: 13pt; height: 13pt; background-color: green;border: 1px solid black;"></div>
